# KDStateMachineEditor

./: .clang-tidy  .codespellrc  .gitignore  .gitmodules  .krazy  .pre-commit-config.yaml  .travis.yml  CHANGES  CMakeLists.txt  CMakePresets.json  Doxyfile.cmake.in  INSTALL.txt  Install.txt  LICENSE.LGPL.txt  LICENSE.US.txt  LICENSE.txt  Mainpage.dox  README.md  README.txt  REUSE.toml  ReadMe-commercial.txt  ReadMe.txt  add_license_blurb.sh  appveyor.yml  debian.changelog  debian.control  index.html  kdstatemachineeditor.dsc  kdstatemachineeditor.spec  params.json
.reuse/: dep5
docs/: CMakeLists.txt  KDStateMachineEditor-CopyrightAssignmentForm.docx
docs/api/: CMakeLists.txt  Doxyfile.cmake  Mainpage.dox  footer.html
examples/: CMakeLists.txt  config-examples.h.cmake
examples/export/: CMakeLists.txt  main.cpp
examples/layoutexport/: CMakeLists.txt  main.cpp
examples/qscxmldebugger/: CMakeLists.txt  main.cpp  trafficlight-widgets-static.qrc  trafficlight.cpp  trafficlight.h
examples/qsmdebugger/: CMakeLists.txt  main.cpp  trafficlight.cpp  trafficlight.h
examples/scxmlimport/: CMakeLists.txt  main.cpp
examples/simplestatemachine/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  config-kdsme.h.cmake
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/: CMakeLists.txt  commandcontroller.cpp  commandcontroller.h  configurationcontroller.cpp  configurationcontroller.h  debug.cpp  debug.h  editcontroller.cpp  editcontroller.h  kdsmeconstants.h  semanticzoommanager.cpp  semanticzoommanager.h
src/core/command/: changestatemachinecommand.h  command.cpp  command.h  commandfactory.cpp  commandfactory.h  createelementcommand.h  deleteelementcommand.cpp  deleteelementcommand.h  layoutsnapshotcommand.cpp  layoutsnapshotcommand.h  modifydefaultstatecommand.h  modifyinitialstatecommand.cpp  modifyinitialstatecommand.h  modifylayoutitemcommand.cpp  modifylayoutitemcommand.h  modifypropertycommand.h  modifytransitioncommand.h  modifytransitionlayoutitemcommand.cpp  modifytransitionlayoutitemcommand.h  reparentelementcommand.h
src/core/common/: metatypedeclarations.h
src/core/export/: abstractexporter.cpp  abstractexporter.h  qmlexporter.cpp  qmlexporter.h  scxmlexporter.cpp  scxmlexporter.h  svgexporter.cpp  svgexporter.h
src/core/import/: abstractimporter.cpp  abstractimporter.h  scxmlimporter.cpp  scxmlimporter.h  scxmlparser.cpp  scxmlparser.h
src/core/integration/: debuginterface.rep  debuginterface_types.h  debuginterfaceclient.cpp  debuginterfaceclient.h  qsmadapter.cpp  qsmadapter.h  qsmdebuginterfacesource.cpp  qsmdebuginterfacesource.h  qsmwatcher.cpp  qsmwatcher.h
src/core/layout/: layerwiselayouter.cpp  layerwiselayouter.h  layouter.cpp  layouter.h  layoutimportexport.cpp  layoutimportexport.h  layoutitem.cpp  layoutitem.h  layoutitemmodel.cpp  layoutitemmodel.h  layoutitemwalker.h  layoutproperties.cpp  layoutproperties.h  layoututils.cpp  layoututils.h
src/core/model/: element.cpp  element.h  element_p.h  elementfactory.cpp  elementfactory.h  elementmodel.cpp  elementmodel.h  elementutil.cpp  elementutil.h  elementwalker.h  runtimecontroller.cpp  runtimecontroller.h  state.cpp  state.h  transition.cpp  transition.h
src/core/tests/: CMakeLists.txt  config-test.h.cmake  parsehelper.cpp  parsehelper.h  test_layouter.cpp  test_layoutinformation.cpp  test_layoutitem.cpp  test_models.cpp  test_parser.cpp  test_qmlexport.cpp  test_qsmintegration.cpp  test_scxmlexport.cpp  test_scxmlimport.cpp  test_statemachine.cpp  test_util.cpp  util.cpp  util.h
src/core/util/: depthchecker.cpp  depthchecker.h  objecthelper.cpp  objecthelper.h  objecttreemodel.cpp  objecttreemodel.h  pushvalue.h  ringbuffer.h  settings.cpp  settings.h  treewalker.h
src/core/view/: abstractview.cpp  abstractview.h  view.cpp  view.h
src/data/scxml/: README.txt  example_calculator.scxml
src/debuginterface/: CMakeLists.txt  debuginterface.rep  debuginterface_types.h
src/debuginterface/debuginterfaceclient/: CMakeLists.txt  debuginterfaceclient.cpp  debuginterfaceclient.h
src/debuginterface/debuginterfacesource/: CMakeLists.txt  qscxmldebuginterfacesource.cpp  qscxmldebuginterfacesource.h  qsmdebuginterfacesource.cpp  qsmdebuginterfacesource.h  qsmwatcher.cpp  qsmwatcher_p.h
src/fwd_headers/graphviz/: cgraph.h  gvc.h  gvplugin.h  types.h
src/view/: CMakeLists.txt  abstractcontroller.cpp  abstractcontroller.h  abstractscene.cpp  abstractscene.h  abstractscene_p.h  abstractview.cpp  abstractview.h  commandcontroller.cpp  commandcontroller.h  configurationcontroller.cpp  configurationcontroller.h  debug.cpp  debug.h  editcontroller.cpp  editcontroller.h  instantiatorinterface.h  instantiatorinterface_p.h  kdsme.qrc  semanticzoommanager.cpp  semanticzoommanager.h  statemachinescene.cpp  statemachinescene.h  statemachinescene_p.h  view.cpp  view.h
src/view/command/: changestatemachinecommand.cpp  changestatemachinecommand.h  changestatemachinecommand_p.h  command.cpp  command.h  command_p.h  commandfactory.cpp  commandfactory.h  commandfactory_p.h  createelementcommand.cpp  createelementcommand.h  createelementcommand_p.h  deleteelementcommand.cpp  deleteelementcommand.h  deleteelementcommand_p.h  layoutsnapshotcommand.cpp  layoutsnapshotcommand.h  layoutsnapshotcommand_p.h  modifydefaultstatecommand.cpp  modifydefaultstatecommand.h  modifydefaultstatecommand_p.h  modifyelementcommand.cpp  modifyelementcommand.h  modifyelementcommand_p.h  modifyinitialstatecommand.cpp  modifyinitialstatecommand.h  modifyinitialstatecommand_p.h  modifylayoutitemcommand.cpp  modifylayoutitemcommand.h  modifypropertycommand.cpp  modifypropertycommand.h  modifypropertycommand_p.h  modifytransitioncommand.cpp  modifytransitioncommand.h  modifytransitioncommand_p.h  modifytransitionlayoutitemcommand.cpp  modifytransitionlayoutitemcommand.h  reparentelementcommand.cpp  reparentelementcommand.h  reparentelementcommand_p.h
src/view/qml/: LayoutItemLoader.qml  Scene.qml  SceneItemFactory.qml  StateMachineDebugToolBar.qml  StateMachineScene.qml  StateMachineView.qml  (+1 more)
(+145 files in other folders)
